# ash-boilerplate

./: Cargo.toml  compile_shaders.sh  rustfmt.toml
assets/models/niko/: credits.txt  niko.mtl
assets/shaders/compute/: instance.spv
assets/shaders/plain/: vert.spv
assets/shaders/tex_plain/: vert.spv
other/: niko.blend
src/: app.rs  keys.rs  main.rs  objects.rs  square.rs  static_scene.rs
src/render/: camera.rs  cursor.rs  mod.rs  renderable_3d.rs  renderer.rs  sync.rs  utility.rs
src/render/models/: box.rs  cube.rs  mod.rs  modeled.rs  niko.rs  weird_square.rs
src/render/objects/: debug_utils.rs  framebuffers.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  push_constants.rs  render_pass.rs  square_instance.rs  surface.rs  surface_platforms.rs  swapchain.rs  vert_instance.rs  vertex.rs
src/render/objects/buffers/: host_writable.rs  local.rs  local_constant.rs  mod.rs
src/render/objects/command_buffer_pools/: compute.rs  main.rs  mod.rs  transfer.rs
src/render/objects/descriptor_sets/: layouts.rs  mod.rs  pool.rs
src/render/objects/pipelines/: compute.rs  graphics.rs  mod.rs
src/render/objects/vertices/: color.rs  instance.rs  mod.rs  tex.rs
src/render/shaders/: mod.rs
src/render/shaders/compute/: instance.comp  mod.rs
src/render/shaders/plain/: mod.rs  shader.vert
src/render/shaders/tex_plain/: mod.rs  shader.frag  shader.vert
src/render/shaders/triangle/: mod.rs  shader.frag  shader.vert
src/render/textures/: mod.rs  niko.rs  textures.rs
src/structures/: dynamic_container.rs  linear_2d_vec.rs  mod.rs  partition.rs
