[package]
name = "ash_boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
raw-window-handle = "0.5"
winit = "0.27.1"
ash = "0.37"
ash-window = "0.12.0"
log = "0.4"
env_logger = "0.10.0"
num = "0.4.0"
memoffset = "0.8.0"
rand = "0.8.5"
cgmath = "0.18.0"

