[package]
name = "ash_boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
raw-window-handle = "0.5"
winit = "0.27.1"
ash = {version = "0.37", default-features = false, features = ["debug"]}
ash-window = "0.12.0"
log = {version = "0.4", default-features = false}
env_logger = "0.10.0"
num = "0.4.0"
memoffset = "0.8.0"
rand = "0.8.5"
cgmath = "0.18.0"

[features]
"load_vulkan" = ["ash/loaded"]
"link_vulkan" = ["ash/linked"]
"vulkan_vl" = ["log/max_level_trace", "log/release_max_level_trace"]
