[package]
name = "ash_boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
raw-window-handle = "0.5"
winit = "0.28.3"
ash = {version = "0.37", default-features = false, features = ["debug"]}
ash-window = "0.12.0"
log = {version = "0.4", default-features = false}
env_logger = "0.10.0"
num = "0.4.0"
memoffset = "0.8.0"
rand = "0.8.5"
cgmath = "0.18.0"
obj-rs = { version = "0.7.1", features = ["glium"] }
itertools = "0.11.0"
const_format = "0.2.32"

[features]
"default" = ["load_vulkan", "vulkan_vl"]
"load_vulkan" = ["ash/loaded"]
"link_vulkan" = ["ash/linked"]
"vulkan_vl" = ["log/max_level_trace", "log/release_max_level_trace"]
